src/test/ui/rustc_private-libtest.rs
fn main() {
    extern crate libtest;
    use libtest::*; //~ ERROR unresolved import
}
